--- a/src/Components/Bio/Bio.css
+++ b/src/Components/Bio/Bio.css
@@ -5,6 +5,8 @@
     text-align: center;
     width: 100%;
     max-width: 600px;
+    gap: 0;
+    margin-bottom: 1rem;
 }
 
 
@@ -37,6 +39,6 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
     /* Adjust the margin as needed */
 }
